add encouragement to keep chatting

--- a/videofade-test/index.html
+++ b/videofade-test/index.html
@@ -292,7 +292,7 @@ window.onInstructionsComplete = function() {
             }
 
             if(videoMixer.currentIndex() == 2) { // Marvin is sufficiently cheered up
-              setStatus("You've cheered Marvin up! Click the 'End chat' button to move on.", "info");
+              setStatus("You've cheered Marvin up! Click the 'End chat' button to move on, or keep chatting if you enjoy the conversation.", "info");
               
               // Change button appearance to indicate completion
               const endBtn = document.getElementById('endInteractionBtn');
